--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Listin articles</h1>
 
+<%= link_to 'New article', new_article_path %>
+
 <table>
   <tr>
     <th>Title</th>
@@ -13,4 +15,6 @@
     </tr>
   <% end %>
 </table>
+
+<%= link_to 'Back', articles_path %>
 
